crates/cfn-lsp/src/snapshots/cfn_lsp__destinations__tests__parse_parameters.snap
---
source: crates/cfn-lsp/src/destinations.rs
expression: targets
---
Ok(
    [
        JumpDestination {
            name: "MyParameter",
            type: Parameter,
            span: Span {
                start: Position {
                    line: 1,
                    col: 2,
                },
                end: Position {
                    line: 1,
                    col: 12,
                },
            },
        },
        JumpDestination {
            name: "Topic",
            type: Resource,
            span: Span {
                start: Position {
                    line: 4,
                    col: 2,
                },
                end: Position {
                    line: 4,
                    col: 6,
                },
            },
        },
    ],
)
