crates/cfn-lsp/src/snapshots/cfn_lsp__destinations__tests__parse_simple.snap
---
source: crates/cfn-lsp/src/destinations.rs
expression: targets
---
[
    JumpDestination {
        name: "MyTopic",
        span: Span {
            start: Position {
                line: 1,
                col: 2,
            },
            end: Position {
                line: 1,
                col: 8,
            },
        },
    },
]
