crates/cfn-lsp/src/snapshots/cfn_lsp__destinations__tests__parse_two_resources.snap
---
source: crates/cfn-lsp/src/destinations.rs
expression: targets
---
Ok(
    [
        JumpDestination {
            name: "Topic",
            span: Span {
                start: Position {
                    line: 1,
                    col: 2,
                },
                end: Position {
                    line: 1,
                    col: 6,
                },
            },
        },
        JumpDestination {
            name: "Parameter",
            span: Span {
                start: Position {
                    line: 4,
                    col: 2,
                },
                end: Position {
                    line: 4,
                    col: 10,
                },
            },
        },
    ],
)
